Correct body text align

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,11 +21,6 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
-body {
-  text-align:center;
-  min-height:100vh; 
-}
-
 h1,
 h2,
 h3,
